--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <ImageView
-            android:id="@+id/photo"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:adjustViewBounds="false"
             android:scaleType="centerCrop"
-            tools:ignore="ContentDescription"/>
+            android:id="@+id/photo"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
