--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,23 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white">
-    <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+
+    <android.support.constraint.ConstraintLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
-            android:layout_width="match_parent"
+            android:id="@+id/photo"
+            android:layout_width="352dp"
             android:layout_height="180dp"
             android:scaleType="centerCrop"
-            android:id="@+id/photo"/>
+            tools:layout_conversion_absoluteX="16dp"
+            tools:layout_conversion_absoluteY="16dp"
+            tools:layout_conversion_absoluteWidth="352dp"
+            tools:layout_conversion_absoluteHeight="180dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/title"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"/>
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/title"
+            android:layout_width="374dp"
+            android:layout_height="35dp"
+            android:layout_marginBottom="8dp"
+            android:textAlignment="center"
             android:textAppearance="@android:style/TextAppearance.Large"
-            android:layout_margin="8dp"
-            android:textAlignment="center"/>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_conversion_absoluteHeight="26dp"
+            tools:layout_conversion_absoluteWidth="368dp"
+            tools:layout_conversion_absoluteX="8dp"
+            tools:layout_conversion_absoluteY="220dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
