--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -16,37 +16,40 @@
             android:id="@+id/photo"
             android:layout_width="352dp"
             android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            tools:layout_conversion_absoluteX="16dp"
-            tools:layout_conversion_absoluteY="16dp"
-            tools:layout_conversion_absoluteWidth="352dp"
-            tools:layout_conversion_absoluteHeight="180dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:scaleType="centerCrop"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/title"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/title"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+            tools:layout_conversion_absoluteHeight="180dp"
+            tools:layout_conversion_absoluteWidth="352dp"
+            tools:layout_conversion_absoluteX="16dp"
+            tools:layout_conversion_absoluteY="16dp"/>
 
         <TextView
             android:id="@+id/title"
             android:layout_width="374dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:elegantTextHeight="true"
             android:textAlignment="center"
-            android:textAppearance="@android:style/TextAppearance.Large"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             tools:layout_conversion_absoluteHeight="26dp"
             tools:layout_conversion_absoluteWidth="368dp"
             tools:layout_conversion_absoluteX="8dp"
-            tools:layout_conversion_absoluteY="220dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            tools:layout_conversion_absoluteY="220dp"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
