--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hackthon.shareloc.MainActivity">
+    tools:context="com.hackthon.shareloc.MainActivity"
+    android:background="@drawable/background">
 
 
-    <Button
+ <Button
         android:id="@+id/share"
         android:layout_width="88dp"
         android:layout_height="48dp"
